--- a/.prettierrc
+++ b/.prettierrc
@@ -1,12 +1,9 @@
 {
-  "semi": true,
-  "trailingComma": "es5",
+  "semi": false,
   "singleQuote": true,
-  "printWidth": 100,
+  "trailingComma": "es5",
   "tabWidth": 4,
-  "useTabs": false,
-  "quoteProps": "as-needed",
-  "bracketSpacing": true,
-  "arrowParens": "avoid",
+  "printWidth": 100,
+  "arrowParens": "always",
   "endOfLine": "lf"
 }
