--- a/package.json
+++ b/package.json
@@ -1,58 +1,34 @@
 {
-    "name": "viwo",
-    "version": "1.0.0",
-    "description": "A library and CLI for managing virtual workspaces",
-    "main": "dist/index.js",
-    "module": "dist/index.js",
-    "types": "dist/index.d.ts",
-    "bin": {
-        "viwo": "dist/cli.js"
-    },
-    "type": "module",
-    "scripts": {
-        "build": "tsc",
-        "build:watch": "tsc --watch",
-        "dev": "bun src/cli.ts",
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "format": "prettier --write .",
-        "format:check": "prettier --check .",
-        "prepare": "husky"
-    },
-    "files": [
-        "dist"
-    ],
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/OverseedAI/virtual-workspaces.git"
-    },
-    "keywords": [
-        "workspace",
-        "cli",
-        "virtual",
-        "development"
-    ],
-    "author": "",
-    "license": "ISC",
-    "bugs": {
-        "url": "https://github.com/OverseedAI/virtual-workspaces/issues"
-    },
-    "homepage": "https://github.com/OverseedAI/virtual-workspaces#readme",
-    "private": false,
-    "dependencies": {
-        "commander": "^14.0.0",
-        "zod": "^4.1.5"
-    },
-    "devDependencies": {
-        "@types/bun": "latest",
-        "@types/node": "^20.0.0",
-        "husky": "^9.1.7",
-        "lint-staged": "^16.1.6",
-        "prettier": "^3.6.2",
-        "typescript": "^5.9.2"
-    },
-    "lint-staged": {
-        "*.{js,jsx,ts,tsx,json,css,md}": [
-            "prettier --write"
-        ]
-    }
+  "name": "viwo",
+  "version": "0.0.0",
+  "private": true,
+  "type": "module",
+  "workspaces": [
+    "packages/*",
+    "apps/*"
+  ],
+  "scripts": {
+    "build": "bun run --filter '*' build",
+    "dev": "bun run --filter '*' dev",
+    "lint": "eslint .",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "typecheck": "bun run --filter '*' typecheck"
+  },
+  "devDependencies": {
+    "@types/bun": "^1.1.15",
+    "@typescript-eslint/eslint-plugin": "^8.18.2",
+    "@typescript-eslint/parser": "^8.18.2",
+    "eslint": "^9.17.0",
+    "eslint-config-prettier": "^9.1.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.1.6",
+    "prettier": "^3.4.2",
+    "typescript": "^5.7.2"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx,css,md}": [
+      "prettier --write"
+    ]
+  }
 }
