--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,9 @@
 {
-  "semi": false,
-  "singleQuote": true,
-  "trailingComma": "es5",
-  "tabWidth": 4,
-  "printWidth": 100,
-  "arrowParens": "always",
-  "endOfLine": "lf"
+    "semi": true,
+    "singleQuote": true,
+    "trailingComma": "es5",
+    "tabWidth": 4,
+    "printWidth": 100,
+    "arrowParens": "always",
+    "endOfLine": "lf"
 }
