Add migrations, fix some eslint stuff

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "typecheck": "bun run --filter '*' typecheck",
-    "clean": "rm -rf node_modules packages/*/node_modules apps/*/node_modules packages/*/*.tsbuildinfo apps/*/*.tsbuildinfo packages/*/dist apps/*/dist"
+    "clean": "rm -rf node_modules packages/*/node_modules apps/*/node_modules packages/*/*.tsbuildinfo apps/*/*.tsbuildinfo packages/*/dist apps/*/dist",
+    "db:generate": "bun run --filter '@viwo/core' db:generate"
   },
   "type": "module",
   "workspaces": [
