--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -12,7 +12,8 @@
   },
   "scripts": {
     "build": "bun build src/index.ts --outdir dist --target node --format esm && tsc --emitDeclarationOnly",
-    "db:generate": "bunx drizzle-kit generate --dialect sqlite --schema ./src/db-schemas/index.ts && bun scripts/generate-migrations.ts",
+    "db:generate": "bunx drizzle-kit generate --dialect sqlite --schema ./src/db-schemas/index.ts",
+    "db:migrate": "bun scripts/generate-migrations.ts",
     "typecheck": "tsc --noEmit"
   },
   "files": [
