[DEV-99] VIWO start api to begin a new session (#6)
* Rename `init` to `start`, add some guards to repo logic

* Add checks before running session create

* Initialize Claude memory

* Fix eslint config for env/globals

* Move globals to dev dependency

* Refactor to personal preference standards, using objects as arguments

* Really fix ESLint globals

* Add migration script, get started on viwo start

* Cleanup

* Add anthropic auth token and make Claude Code work in docker with default permissions enabled

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -12,6 +12,8 @@
   },
   "scripts": {
     "build": "bun build src/index.ts --outdir dist --target node --format esm && tsc --emitDeclarationOnly",
+    "db:generate": "bunx drizzle-kit generate --dialect sqlite --schema ./src/db-schemas/index.ts",
+    "db:migrate": "bun scripts/generate-migrations.ts",
     "typecheck": "tsc --noEmit"
   },
   "files": [
@@ -21,6 +23,7 @@
   "dependencies": {
     "dockerode": "^4.0.2",
     "drizzle-orm": "^0.44.7",
+    "env-paths": "^3.0.0",
     "get-port": "^7.0.0",
     "nanoid": "^5.1.6",
     "simple-git": "^3.21.0",
@@ -31,3 +34,4 @@
     "typescript": "^5.7.2"
   }
 }
+
