--- a/package.json
+++ b/package.json
@@ -1,23 +1,6 @@
 {
   "name": "viwo",
   "version": "0.0.0",
-  "devDependencies": {
-    "@types/better-sqlite3": "^7.6.13",
-    "@types/bun": "^1.3.2",
-    "@typescript-eslint/eslint-plugin": "^8.47.0",
-    "@typescript-eslint/parser": "^8.47.0",
-    "eslint": "^9.39.1",
-    "eslint-config-prettier": "^9.1.2",
-    "husky": "^9.1.7",
-    "lint-staged": "^16.2.6",
-    "prettier": "^3.6.2",
-    "typescript": "^5.9.3"
-  },
-  "lint-staged": {
-    "*.{js,jsx,ts,tsx,css,md}": [
-      "prettier --write"
-    ]
-  },
   "private": true,
   "scripts": {
     "build": "bun run --filter '*' build",
@@ -27,11 +10,30 @@
     "format:check": "prettier --check .",
     "typecheck": "bun run --filter '*' typecheck",
     "clean": "rm -rf node_modules packages/*/node_modules apps/*/node_modules packages/*/*.tsbuildinfo apps/*/*.tsbuildinfo packages/*/dist apps/*/dist",
-    "db:generate": "bun run --filter '@viwo/core' db:generate"
+    "db:generate": "bun run --filter '@viwo/core' db:generate",
+    "docker:build": "docker build -t viwo-claude-code packages/agents/claude-code"
   },
   "type": "module",
   "workspaces": [
     "packages/*",
     "apps/*"
-  ]
+  ],
+  "devDependencies": {
+    "@types/better-sqlite3": "^7.6.13",
+    "@types/bun": "^1.3.2",
+    "@typescript-eslint/eslint-plugin": "^8.47.0",
+    "@typescript-eslint/parser": "^8.47.0",
+    "eslint": "^9.39.1",
+    "eslint-config-prettier": "^9.1.2",
+    "globals": "^16.5.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.2.6",
+    "prettier": "^3.6.2",
+    "typescript": "^5.9.3"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx,css,md}": [
+      "prettier --write"
+    ]
+  }
 }
