--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,12 +1,16 @@
 {
   "name": "@viwo/cli",
-  "version": "0.1.0",
+  "version": "0.1.2",
   "private": false,
   "type": "module",
   "description": "CLI for VIWO - AI-powered development environment orchestrator",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
-  "files": ["dist", "package.json", "README.md"],
+  "files": [
+    "dist",
+    "package.json",
+    "README.md"
+  ],
   "bin": {
     "viwo": "./dist/cli.js"
   },
