Target bun builds

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "clean": "rm -rf node_modules packages/*/node_modules apps/*/node_modules packages/*/*.tsbuildinfo apps/*/*.tsbuildinfo packages/*/dist apps/*/dist",
     "db:generate": "bun run --filter '@viwo/core' db:generate",
     "docker:build": "docker build -t viwo-claude-code packages/agents/claude-code",
-    "release": "bun scripts/release.ts"
+    "release": "bun scripts/release.ts",
+    "viwo": "bun run --filter '@viwo/cli' viwo"
   },
   "type": "module",
   "workspaces": [
