--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "db:generate": "bun run --filter '@viwo/core' db:generate",
     "docker:build": "docker build -t viwo-claude-code packages/agents/claude-code",
     "release": "bun scripts/release.ts",
-    "viwo": "bun run --filter '@viwo/cli' viwo"
+    "viwo": "bun packages/cli/src/cli.ts"
   },
   "type": "module",
   "workspaces": [
