Open in IDE feature continued

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "typecheck": "bun run --filter '*' typecheck",
     "clean": "rm -rf node_modules packages/*/node_modules apps/*/node_modules packages/*/*.tsbuildinfo apps/*/*.tsbuildinfo packages/*/dist apps/*/dist",
     "db:generate": "bun run --filter '@viwo/core' db:generate",
+    "db:migrate": "bun run --filter '@viwo/core' db:migrate",
     "docker:build": "docker build -t viwo-claude-code packages/agents/claude-code",
     "release": "bun scripts/release.ts",
     "viwo": "bun packages/cli/src/cli.ts"
